compiler/kernc_cli/tests/soundness/run-pass/specialization/rich_trait_object_can_coerce_to_bare_same_trait_object.rn
// exit: 0

trait Base[N: usize] {
    type Out;
};

trait Derived[N: usize]: Base[N] {
    fn more() i32;
};

struct X {};

impl[N: usize] &X: Derived[N] {
    fn more() i32 {
        return 2;
    }
}

impl[N: usize] &X: Base[N] {
    type Out = i32;
}

impl &X: Base[4] {
    type Out = i64;
}

fn take(value: &Derived[4]) i32 {
    return value.more() - 2;
}

fn main() i32 {
    let x = X.{};
    let derived = &Derived[4].{ x.& };
    return take(derived);
}
